<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".UpdateUserActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.5"
        android:scaleType="centerCrop"
        android:src="@drawable/bg_main" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:fontFamily="@font/poppins"
            android:paddingHorizontal="10dp"
            android:text="@string/form_first_name"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/etFirstName"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/et_gray"
            android:fontFamily="@font/poppins"
            android:hint="@string/hint_first_name"
            android:inputType="text"
            android:paddingHorizontal="20dp"
            android:textColorHint="@color/gray_text" />

        <TextView
            android:id="@+id/tvErrorFirstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:paddingHorizontal="10dp"
            android:textColor="@color/error" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="5dp"
            android:fontFamily="@font/poppins"
            android:paddingHorizontal="10dp"
            android:text="@string/form_last_name"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/etLastName"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/et_gray"
            android:fontFamily="@font/poppins"
            android:hint="@string/hint_last_name"
            android:inputType="text"
            android:paddingHorizontal="20dp"
            android:textColorHint="@color/gray_text" />

        <TextView
            android:id="@+id/tvErrorLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:paddingHorizontal="10dp"
            android:textColor="@color/error" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="5dp"
            android:fontFamily="@font/poppins"
            android:paddingHorizontal="10dp"
            android:text="@string/form_age"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/etAge"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/et_gray"
            android:fontFamily="@font/poppins"
            android:hint="@string/hint_age"
            android:inputType="number"
            android:paddingHorizontal="20dp"
            android:textColorHint="@color/gray_text" />

        <TextView
            android:id="@+id/tvErrorAge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:paddingHorizontal="10dp"
            android:textColor="@color/error" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="5dp"
            android:fontFamily="@font/poppins"
            android:paddingHorizontal="10dp"
            android:text="@string/form_email"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/et_gray"
            android:fontFamily="@font/poppins"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:paddingHorizontal="20dp"
            android:textColorHint="@color/gray_text" />

        <TextView
            android:id="@+id/tvErrorEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:paddingHorizontal="10dp"
            android:textColor="@color/error" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnConfirm"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/btn_pink_purple"
            android:fontFamily="@font/poppins"
            android:text="@string/btn_confirm"
            android:textColor="@color/white" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnCancel"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/btn_pink_purple"
            android:fontFamily="@font/poppins"
            android:text="@string/btn_cancel"
            android:textColor="@color/white" />
    </LinearLayout>

</FrameLayout>